# cats-vs-dogs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cats_vs_dogs/: __init__.py  config.py  data_utils.py  infer.py  models.py  train.py  transforms.py
