[tool.poetry]
name = "cats-vs-dogs"
version = "0.1.0"
description = ""
authors = ["Alexander Melekhin <amelekhin96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
