[tool.poetry]
name = "cats-vs-dogs"
version = "0.1.0"
description = ""
authors = ["Alexander Melekhin <amelekhin96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
torch = "1.13.1"
torchvision = "0.14.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
black = "^23.9.1"
flake8-black = "^0.3.6"
isort = "^5.12.0"
flake8-isort = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110
